# OsuFusion

./: .gitignore  LICENSE  dataset_creator.py  inference_gradio.py  pyproject.toml  requirements.txt  trainer.py  trainer_autoencoder.py  trainer_peft.py
models/: diffusion.py
modules/: attention.py  residual.py  scheduler.py  transformer.py  unet.py  utils.py
osu_fusion/data/: augment.py  cursor.py  dataset.py  decode.py  fit_bezier.py
osu_fusion/models/: diffusion.py  rectified_flow.py
osu_fusion/models/backbone/: dit.py
osu_fusion/modules/: attention.py  autoencoder.py  causal_convolution.py  dit.py  ema.py  lora_layers.py  mmdit.py  positional_embeddings.py  residual.py  samplers.py  scheduler.py  transformer.py  unet.py  utils.py
osu_fusion/osu/: sliders.py
osu_fusion/scripts/: dataset_creator.py
scripts/: create_dataset.py  dataset_creator.py  inference_gradio.py  trainer.py  trainer_autoencoder.py  trainer_peft.py
src/osu_fusion/data/: augment.py  const.py  dataset.py  decode.py  encode.py  hit.py  prepare_data.py
src/osu_fusion/models/: autoencoder.py  diffusion.py  rectified_flow.py
src/osu_fusion/models/backbone/: dit.py  mmdit.py  unet.py
src/osu_fusion/modules/: attention.py  norms.py  transformer.py  utils.py
src/osu_fusion/osu/: beatmap.py  replay.py
