[project]
name = "osu_fusion"
version = "0.0.1"
authors = []
description = "WIP diffusion model for osu! beatmaps"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.ruff]
target-version = "py39"
select = ["E", "W", "F", "B", "N", "ANN", "COM", "C4", "EM", "SIM", "RUF", "C90"]
task-tags = ["TODO", "FIXME"]
line-length = 120