[project]
name = "osu_fusion"
version = "0.1.0"
authors = []
description = "WIP diffusion model for osu! beatmaps"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "accelerate>=0.34.2",
    "bezier>=2024.6.20",
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "gradio>=4.44.0",
    "librosa==0.10.1",
    "matplotlib>=3.9.2",
    "peft>=0.12.0",
    "resampy>=0.4.3",
    "rosu-pp-py>=1.1.0",
    "sanitize-filename>=1.2.0",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "torchdiffeq>=0.2.4",
    "tqdm>=4.66.5",
    "wandb>=0.18.1",
]

[tool.ruff]
target-version = "py310"
select = ["E", "W", "F", "B", "N", "ANN", "COM", "C4", "EM", "SIM", "RUF", "C90"]
ignore = ["N803", "N806", "N812"]
task-tags = ["TODO", "FIXME"]
line-length = 120

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "ruff>=0.6.7",
]
